WEB-04 - Tabel alternerende opmaak

--- a/index.html
+++ b/index.html
@@ -38,69 +38,126 @@
     High School diploma - Economy - V.T.I Voorzienigheid - 2015
 </p>
 <br>
-<p>
-    <strong>Hard Skills:</strong>
-    <br>
-    Digital Marketing:
-    Setting up advertising campaigns on Google Ads and Meta.
-    Designing promotional materials.
-    Sending newsletters and managing social media.
-    <br>
-    Bookkeeping:
-    Managing accounting processes with Exact Online.
-    Handling incoming and outgoing invoices.
-    <br>
-    Customer Relationship Management:
-    Welcoming clients during site visits.
-    Managing customer databases using Microsoft Excel.
-    Prospecting clients using various resources.
-    <br>
-    Administrative Skills:
-    Document organization (offers, confirmations, invoices).
-    Developing a quote calculator to streamline the sales process.
-    <br>
-    Web Development:
-    Designing and maintaining websites using WordPress.
-    <br>
-    Process Innovation:
-    Expanding business activities.
-    Developing a B2C concept for a traditionally B2B company.
-    <br>
-    Languages:
-    Dutch (Native)
-    English (Excellent)
-    French (Good)
-    German (Basic)
-    <br>
-    Software Proficiency:
-    Microsoft Office Suite (Word, Excel)
-</p>
-<br>
-<p>
-    <strong>Soft Skills:</strong>
-    <br>
-    Management and Leadership:
-    Supervising work by students and flex workers.
-    Providing instructions and oversight.
-    <br>
-    Creativity:
-    Designing marketing materials and innovating business concepts.
-    <br>
-    Critical Thinking and Problem-Solving:
-    Enhancing processes such as sales workflows and concept development.
-    <br>
-    Negotiation:
-    Effectively prospecting and managing client relationships.
-    <br>
-    Independence and Initiative:
-    Taking charge of diverse responsibilities and driving projects forward.
-    <br>
-    Assertiveness:
-    Proactively addressing challenges and communicating confidently.
-    <br>
-</p>
-<br>
+<div class="tables">
+    <table class="skills-table">
+        <thead>
+        <tr>
+            <th colspan="2">Hard Skills</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>
+                Digital Marketing:
+            </td>
+            <td>
+                Setting up advertising campaigns on Google Ads and Meta.
+                Designing promotional materials.
+                Sending newsletters and managing social media.
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Bookkeeping:
+            </td>
+            <td>
+                Managing accounting processes with Exact Online.
+                Handling incoming and outgoing invoices.
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Customer Relationship Management:
+            </td>
+            <td>
+                Welcoming clients during site visits.
+                Managing customer databases using Microsoft Excel.
+                Prospecting clients using various resources.
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Administrative Skills:
+            </td>
+            <td>
+                Document organization (offers, confirmations, invoices).
+                Developing a quote calculator to streamline the sales process.
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Web Development:
+            </td>
+            <td>
+                Designing and maintaining websites using WordPress.
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Process Innovation:
+            </td>
+            <td>
+                Expanding business activities.
+                Developing a B2C concept for a traditionally B2B company.
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Software Proficiency:
+            </td>
+            <td>
+                Microsoft Office Suite (Word, Excel)
+            </td>
+        </tr>
+        <tr>
+            <td>Languages:</td>
+            <td>
+                Dutch (Native),
+                English (Excellent),
+                French (Good),
+                German (Basic)
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    </div>
+<div class="tables">
+    <table class="skills-table">
+        <thead>
+        <tr>
+            <th colspan="2">Soft Skills</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Management and Leadership:</td>
+            <td>Supervising work by students and flex workers. Providing instructions and oversight.</td>
+        </tr>
+        <tr>
+            <td>Creativity:</td>
+            <td>Designing marketing materials and innovating business concepts.</td>
+        </tr>
+        <tr>
+            <td>Critical Thinking and Problem-Solving:</td>
+            <td>Enhancing processes such as sales workflows and concept development.</td>
+        </tr>
+        <tr>
+            <td>Negotiation:</td>
+            <td>Effectively prospecting and managing client relationships.</td>
+        </tr>
+        <tr>
+            <td>Independence and Initiative:</td>
+            <td>Taking charge of diverse responsibilities and driving projects forward.</td>
+        </tr>
+        <tr>
+            <td>Assertiveness:</td>
+            <td>Proactively addressing challenges and communicating confidently.</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
+<br>
 <p>
     <strong>Work History:</strong>
     <br>
