WEB-05 - Werkervaringen lijst

--- a/index.html
+++ b/index.html
@@ -18,27 +18,48 @@
     Hello, world!
 </h2>
 <p>
-    I’m Lorenzo Latinne, an aspiring software and web developer currently pursuing an associate degree in Programming. My journey into the world of IT began with a deep admiration for how technology shapes our lives and a desire to combine my passions with a fulfilling career. I’m on track to master C#, JavaScript, HTML, and CSS, and I’m proud to be nearing the completion of Harvard’s CS50: Introduction to Computer Science—my first certification within the world of IT. This portfolio is a key part of my final project and an important step in my learning journey.
-    Through my studies, I’ve tackled challenging problem sets and developed creative projects like a personal portfolio website and a Mastermind game built in C#. These experiences have strengthened my skills and fuelled my excitement for a future in programming, where the mix of logic and creativity is what intrigues me most.
-    Prior to my studies, I worked for four years as a Manager’s Assistant, handling marketing, finances, and customer relations. This experience taught me the importance of communication and organization—skills I know will serve me well in the IT field.
-    Outside of work, my greatest joy comes from spending time with my wife and close friends. I recently achieved one of my proudest milestones: buying a home with my wife as we prepare to welcome our first child at the end of 2024. In my free time, I love playing guitar, singing, and listening to music, finding inspiration in the balance between discipline and creativity.
-    What motivates me most is the never-ending journey of learning. I love the challenge of tackling new ideas and solving problems in a field that truly interests me. IT offers the possibility of not only personal growth but also achieving a meaningful work-life balance—something I value deeply as I look forward to this exciting chapter in my life.
+    I’m Lorenzo Latinne, an aspiring software and web developer currently pursuing an associate degree in Programming.
+    My journey into the world of IT began with a deep admiration for how technology shapes our lives and a desire to
+    combine my passions with a fulfilling career. I’m on track to master C#, JavaScript, HTML, and CSS, and I’m proud to
+    be nearing the completion of Harvard’s CS50: Introduction to Computer Science—my first certification within the
+    world of IT. This portfolio is a key part of my final project and an important step in my learning journey.
+    Through my studies, I’ve tackled challenging problem sets and developed creative projects like a personal portfolio
+    website and a Mastermind game built in C#. These experiences have strengthened my skills and fuelled my excitement
+    for a future in programming, where the mix of logic and creativity is what intrigues me most.
+    Prior to my studies, I worked for four years as a Manager’s Assistant, handling marketing, finances, and customer
+    relations. This experience taught me the importance of communication and organization—skills I know will serve me
+    well in the IT field.
+    Outside of work, my greatest joy comes from spending time with my wife and close friends. I recently achieved one of
+    my proudest milestones: buying a home with my wife as we prepare to welcome our first child at the end of 2024. In
+    my free time, I love playing guitar, singing, and listening to music, finding inspiration in the balance between
+    discipline and creativity.
+    What motivates me most is the never-ending journey of learning. I love the challenge of tackling new ideas and
+    solving problems in a field that truly interests me. IT offers the possibility of not only personal growth but also
+    achieving a meaningful work-life balance—something I value deeply as I look forward to this exciting chapter in my
+    life.
 
 </p>
 <br>
-<p>
-    <strong>Education:</strong>
-    <br>
-    Bachelor in Business management Marketing - PXL Hasselt - Second year of bachelor's degree finished - 2017-2019
-    <br>
-    Master in Law - University Hasselt - Second year of bachelor's degree finished - 2015-2017
-    <br>
-    Business Management Certificate - 2015
-    <br>
-    High School diploma - Economy - V.T.I Voorzienigheid - 2015
-</p>
-<br>
-<div class="tables">
+<h2 class="section-title">Education</h2>
+<div class="education">
+    <p>
+        Bachelor in Business management Marketing - PXL Hasselt - Second year of bachelor's degree finished - 2017-2019
+    </p>
+    <p>
+        Master in Law - University Hasselt - Second year of bachelor's degree finished - 2015-2017
+    </p>
+    <p>
+        Business Management Certificate - 2015
+
+    </p>
+    <p>
+        High School diploma - Economy - V.T.I Voorzienigheid - 2015
+
+    </p>
+</div>
+
+<h2 class="section-title">Skills</h2>
+<div class="skills">
     <table class="skills-table">
         <thead>
         <tr>
@@ -120,8 +141,6 @@
         </tr>
         </tbody>
     </table>
-    </div>
-<div class="tables">
     <table class="skills-table">
         <thead>
         <tr>
@@ -157,13 +176,129 @@
     </table>
 </div>
 
-<br>
-<p>
-    <strong>Work History:</strong>
-    <br>
-    Het XPand - Manager's Assistant - 2020 - 2023
-    <br>
-    LABO LEB - Manager's Assistant - 2023 - 2024
-</p>
+<h2 class="section-title">Work History</h2>
+<div class="work-history">
+    <ul>
+        <li>
+            <h3>Het XPand - Manager's Assistant - 2020 - 2023</h3>
+            <ul>
+                <li>
+                    <p class="job-skill">Administrative Support</p>
+                    <div class="job-description ">
+                        <p>Manage the manager’s calendar, including scheduling meetings with clients, vendors, and
+                            staff.</p>
+                        <p>Handle correspondence such as emails, calls, and messages from prospective and current
+                            clients.</p>
+                        <p>Organize and maintain files, contracts, and event-related documentation for quick access.</p>
+                    </div>
+                </li>
+                <li>
+                    <p class="job-skill">Client Interaction</p>
+                    <div class="job-description ">
+                        <p>Serve as the first point of contact for clients, assisting with inquiries and initial event
+                            planning details.</p>
+                        <p>Coordinate site visits, walk-throughs, and consultations with clients to finalize event
+                            requirements.</p>
+                        <p>Ensure timely communication and follow-up to confirm client expectations.</p>
+                    </div>
+                </li>
+                <li>
+                    <p class="job-skill">Event Coordination</p>
+                    <div class="job-description ">
+                        <p>Assist the manager in planning and organizing events, from corporate meetings to large-scale
+                            parties.</p>
+                        <p>Coordinate with clients and vendors to arrange catering, audiovisual equipment, decorations,
+                            and other requirements.</p>
+                        <p>Create and manage event schedules and checklists to ensure timely execution.</p>
+                    </div>
+                </li>
+                <li>
+                    <p class="job-skill">Venue Operations</p>
+                    <div class="job-description ">
+                        <p>Monitor the setup and teardown of events, ensuring the space is prepared to meet client
+                            specifications.</p>
+                        <p>Track inventory levels for event supplies, such as furniture, tableware, and decorations, and
+                            coordinate replenishments.</p>
+                        <p>Oversee adherence to safety, fire code, and venue-specific regulations.</p>
+                    </div>
+                </li>
+                <li>
+                    <p class="job-skill">Financial Administration</p>
+                    <div class="job-description ">
+                        <p>Prepare invoices, track payments, and ensure accurate billing for clients and vendors.</p>
+                        <p>Maintain budgets for individual events and report discrepancies or overspending to the
+                            manager.</p>
+                        <p>Support the manager in generating financial summaries and performance reports for the
+                            venue.</p>
+                    </div>
+                </li>
+                <li>
+                    <p class="job-skill">Marketing and Sales Support</p>
+                    <div class="job-description ">
+                        <p>Assist in drafting promotional materials, social media posts, and email campaigns to attract
+                            corporate clients.</p>
+                        <p>Maintain relationships with repeat clients and gather feedback to improve services.</p>
+                        <p>Coordinate promotional events, open houses, or showcases to highlight venue capabilities.</p>
+                    </div>
+                </li>
+                <li>
+                    <p class="job-skill">Problem Solving</p>
+                    <div class="job-description ">
+                        <p>Act as a troubleshooter during events, addressing last-minute changes, client concerns, or
+                            logistical challenges.</p>
+                        <p>Maintain composure and professionalism to resolve issues promptly and ensure client
+                            satisfaction.</p>
+                    </div>
+                </li>
+            </ul>
+        </li>
+    </ul>
+    <ul>
+        <li>
+            <h3>LABO LEB - Manager's Assistant - 2023 - 2024</h3>
+            <ul>
+                <li>
+                    <p class="job-skill">Administrative Support</p>
+                    <div class="job-description">
+                        <p>Organize and maintain schedules, appointments, and meetings for the manager.</p>
+                        <p>Prepare and distribute meeting agendas, take minutes, and track follow-up actions.</p>
+                        <p>Manage correspondence, including emails, memos, and reports, ensuring timely
+                            communication.</p>
+                    </div>
+                </li>
+                <li>
+                    <p class="job-skill">Operations Coordination</p>
+                    <div class="job-description ">
+                        <p>Monitor inventory levels of materials, chemicals, and equipment, coordinating procurement as
+                            needed.</p>
+                        <p>Track and document the calibration and maintenance schedules of laboratory instruments.</p>
+                    </div>
+                </li>
+                <li>
+                    <p class="job-skill">Data Management</p>
+                    <div class="job-description ">
+                        <p>Compile and organize laboratory test results, ensuring accuracy and confidentiality.</p>
+                        <p>Maintain an efficient record-keeping system for documentation and regulatory compliance.</p>
+                    </div>
+                </li>
+                <li>
+                    <p class="job-skill">Communication and Liaison</p>
+                    <div class="job-description ">
+                        <p>Act as a bridge between the laboratory and external clients or suppliers, facilitating clear
+                            communication.</p>
+                        <p>Coordinate with other departments or external partners for joint projects or initiatives.</p>
+                    </div>
+                </li>
+                <li>
+                    <p class="job-skill">Problem Solving</p>
+                    <div class="job-description ">
+                        <p>Maintain composure and professionalism to resolve issues promptly and ensure client
+                            satisfaction.</p>
+                    </div>
+                </li>
+            </ul>
+        </li>
+    </ul>
+</div>
 </body>
 </html>
