WEB-07 - Terug-naar-boven-knop

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<header>
+<header id="top-of-page">
 
 </header>
 
@@ -311,7 +311,7 @@
     <div class="footer-content">
         <p>Lorenzo Latinne - 1PROa</p>
         <p>Opdracht curriculum vitae</p>
-        <a href=""><p>Back to top</p></a>
+        <a href="#top-of-page"><p>Back to top</p></a>
     </div>
 </footer>
 
