Working on lay-out.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
 </head>
 <body>
 <header id="top-of-page">
+    <nav class="nav-bar">
+        <div class="logo">
 
+        </div>
+        <div class="menu">
+
+        </div>
+    </nav>
+    <div class="personal-info">
+        <section class="about-me">
+
+        </section>
+        <section class="profile-picture">
+
+        </section>
+    </div>
 </header>
 
 <main>
