Working on lay-out.

--- a/index.html
+++ b/index.html
@@ -10,52 +10,67 @@
 <header id="top-of-page">
     <nav class="nav-bar">
         <div class="logo">
-
+            <p>Logo</p>
         </div>
         <div class="menu">
-
+            <p>Menu</p>
         </div>
     </nav>
     <div class="personal-info">
         <section class="about-me">
-
+            <div class="about-me-name about-me-div">
+                <h1>
+                    Lorenzo Latinne
+                </h1>
+            </div>
+            <div class="about-me-title about-me-div">
+                <h2>
+                    Aspiring Software and Web Developer
+                </h2>
+            </div>
+            <div class="about-me-subtitle about-me-div">
+                <h2>
+                    Hello, world!
+                </h2>
+            </div>
         </section>
         <section class="profile-picture">
-
+            <img src="./assets/profile-picture.jpeg" alt="profile-picture">
         </section>
     </div>
 </header>
 
 <main>
-    <h1>
-        Lorenzo Latinne
-    </h1>
-    <h2>
-        Aspiring Software and Web Developer
-    </h2>
-    <img src="./assets/profile-picture.jpeg" alt="profile-picture">
-    <h2>
-        Hello, world!
-    </h2>
+
     <p>
-        I’m Lorenzo Latinne, an aspiring software and web developer currently pursuing an associate degree in Programming.
+        I’m Lorenzo Latinne, an aspiring software and web developer currently pursuing an associate degree in
+        Programming.
         My journey into the world of IT began with a deep admiration for how technology shapes our lives and a desire to
-        combine my passions with a fulfilling career. I’m on track to master C#, JavaScript, HTML, and CSS, and I’m proud to
+        combine my passions with a fulfilling career. I’m on track to master C#, JavaScript, HTML, and CSS, and I’m
+        proud to
         be nearing the completion of Harvard’s CS50: Introduction to Computer Science—my first certification within the
         world of IT. This portfolio is a key part of my final project and an important step in my learning journey.
-        Through my studies, I’ve tackled challenging problem sets and developed creative projects like a personal portfolio
-        website and a Mastermind game built in C#. These experiences have strengthened my skills and fuelled my excitement
+        Through my studies, I’ve tackled challenging problem sets and developed creative projects like a personal
+        portfolio
+        website and a Mastermind game built in C#. These experiences have strengthened my skills and fuelled my
+        excitement
         for a future in programming, where the mix of logic and creativity is what intrigues me most.
-        Prior to my studies, I worked for four years as a Manager’s Assistant, handling marketing, finances, and customer
-        relations. This experience taught me the importance of communication and organization—skills I know will serve me
+        Prior to my studies, I worked for four years as a Manager’s Assistant, handling marketing, finances, and
+        customer
+        relations. This experience taught me the importance of communication and organization—skills I know will serve
+        me
         well in the IT field.
-        Outside of work, my greatest joy comes from spending time with my wife and close friends. I recently achieved one of
-        my proudest milestones: buying a home with my wife as we prepare to welcome our first child at the end of 2024. In
+        Outside of work, my greatest joy comes from spending time with my wife and close friends. I recently achieved
+        one of
+        my proudest milestones: buying a home with my wife as we prepare to welcome our first child at the end of 2024.
+        In
         my free time, I love playing guitar, singing, and listening to music, finding inspiration in the balance between
         discipline and creativity.
         What motivates me most is the never-ending journey of learning. I love the challenge of tackling new ideas and
-        solving problems in a field that truly interests me. IT offers the possibility of not only personal growth but also
-        achieving a meaningful work-life balance—something I value deeply as I look forward to this exciting chapter in my
+        solving problems in a field that truly interests me. IT offers the possibility of not only personal growth but
+        also
+        achieving a meaningful work-life balance—something I value deeply as I look forward to this exciting chapter in
+        my
         life.
 
     </p>
@@ -63,7 +78,8 @@
     <h2 class="section-title">Education</h2>
     <div class="education">
         <p>
-            Bachelor in Business management Marketing - PXL Hasselt - Second year of bachelor's degree finished - 2017-2019
+            Bachelor in Business management Marketing - PXL Hasselt - Second year of bachelor's degree finished -
+            2017-2019
         </p>
         <p>
             Master in Law - University Hasselt - Second year of bachelor's degree finished - 2015-2017
@@ -209,13 +225,15 @@
                                 staff.</p>
                             <p>Handle correspondence such as emails, calls, and messages from prospective and current
                                 clients.</p>
-                            <p>Organize and maintain files, contracts, and event-related documentation for quick access.</p>
+                            <p>Organize and maintain files, contracts, and event-related documentation for quick
+                                access.</p>
                         </div>
                     </li>
                     <li>
                         <p class="job-skill">Client Interaction</p>
                         <div class="job-description ">
-                            <p>Serve as the first point of contact for clients, assisting with inquiries and initial event
+                            <p>Serve as the first point of contact for clients, assisting with inquiries and initial
+                                event
                                 planning details.</p>
                             <p>Coordinate site visits, walk-throughs, and consultations with clients to finalize event
                                 requirements.</p>
@@ -225,9 +243,11 @@
                     <li>
                         <p class="job-skill">Event Coordination</p>
                         <div class="job-description ">
-                            <p>Assist the manager in planning and organizing events, from corporate meetings to large-scale
+                            <p>Assist the manager in planning and organizing events, from corporate meetings to
+                                large-scale
                                 parties.</p>
-                            <p>Coordinate with clients and vendors to arrange catering, audiovisual equipment, decorations,
+                            <p>Coordinate with clients and vendors to arrange catering, audiovisual equipment,
+                                decorations,
                                 and other requirements.</p>
                             <p>Create and manage event schedules and checklists to ensure timely execution.</p>
                         </div>
@@ -237,7 +257,8 @@
                         <div class="job-description ">
                             <p>Monitor the setup and teardown of events, ensuring the space is prepared to meet client
                                 specifications.</p>
-                            <p>Track inventory levels for event supplies, such as furniture, tableware, and decorations, and
+                            <p>Track inventory levels for event supplies, such as furniture, tableware, and decorations,
+                                and
                                 coordinate replenishments.</p>
                             <p>Oversee adherence to safety, fire code, and venue-specific regulations.</p>
                         </div>
@@ -245,7 +266,8 @@
                     <li>
                         <p class="job-skill">Financial Administration</p>
                         <div class="job-description ">
-                            <p>Prepare invoices, track payments, and ensure accurate billing for clients and vendors.</p>
+                            <p>Prepare invoices, track payments, and ensure accurate billing for clients and
+                                vendors.</p>
                             <p>Maintain budgets for individual events and report discrepancies or overspending to the
                                 manager.</p>
                             <p>Support the manager in generating financial summaries and performance reports for the
@@ -255,16 +277,19 @@
                     <li>
                         <p class="job-skill">Marketing and Sales Support</p>
                         <div class="job-description ">
-                            <p>Assist in drafting promotional materials, social media posts, and email campaigns to attract
+                            <p>Assist in drafting promotional materials, social media posts, and email campaigns to
+                                attract
                                 corporate clients.</p>
                             <p>Maintain relationships with repeat clients and gather feedback to improve services.</p>
-                            <p>Coordinate promotional events, open houses, or showcases to highlight venue capabilities.</p>
+                            <p>Coordinate promotional events, open houses, or showcases to highlight venue
+                                capabilities.</p>
                         </div>
                     </li>
                     <li>
                         <p class="job-skill">Problem Solving</p>
                         <div class="job-description ">
-                            <p>Act as a troubleshooter during events, addressing last-minute changes, client concerns, or
+                            <p>Act as a troubleshooter during events, addressing last-minute changes, client concerns,
+                                or
                                 logistical challenges.</p>
                             <p>Maintain composure and professionalism to resolve issues promptly and ensure client
                                 satisfaction.</p>
@@ -289,24 +314,29 @@
                     <li>
                         <p class="job-skill">Operations Coordination</p>
                         <div class="job-description ">
-                            <p>Monitor inventory levels of materials, chemicals, and equipment, coordinating procurement as
+                            <p>Monitor inventory levels of materials, chemicals, and equipment, coordinating procurement
+                                as
                                 needed.</p>
-                            <p>Track and document the calibration and maintenance schedules of laboratory instruments.</p>
+                            <p>Track and document the calibration and maintenance schedules of laboratory
+                                instruments.</p>
                         </div>
                     </li>
                     <li>
                         <p class="job-skill">Data Management</p>
                         <div class="job-description ">
                             <p>Compile and organize laboratory test results, ensuring accuracy and confidentiality.</p>
-                            <p>Maintain an efficient record-keeping system for documentation and regulatory compliance.</p>
+                            <p>Maintain an efficient record-keeping system for documentation and regulatory
+                                compliance.</p>
                         </div>
                     </li>
                     <li>
                         <p class="job-skill">Communication and Liaison</p>
                         <div class="job-description ">
-                            <p>Act as a bridge between the laboratory and external clients or suppliers, facilitating clear
+                            <p>Act as a bridge between the laboratory and external clients or suppliers, facilitating
+                                clear
                                 communication.</p>
-                            <p>Coordinate with other departments or external partners for joint projects or initiatives.</p>
+                            <p>Coordinate with other departments or external partners for joint projects or
+                                initiatives.</p>
                         </div>
                     </li>
                     <li>
